--- a/index.html
+++ b/index.html
@@ -75,17 +75,23 @@
             <img src="assets/img/jerry.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-xl-6 col-lg-5 pt-5 pt-lg-0">
-            <h3 data-aos="fade-up">Voluptatem dignissimos provident</h3>
+            <!-- <h3 data-aos="fade-up">Voluptatem dignissimos provident</h3>
             <p data-aos="fade-up">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
+            </p> -->
             <div class="icon-box" data-aos="fade-up">
               <i class="bx bx-receipt"></i>
-              <h4>Corporis voluptates sit</h4>
-              <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+              <h4>Name</h4>
+              <p>Jerry Ong</p>
+              <h4>Title</h4>
+              <p>Full Stack Web Developer</p>
+              <h4>Email</h4>
+              <p>jerryong89@gmail.com</p>
+              <h4>Phone</h4>
+              <p>(323)527-5268</p>
             </div>
 
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+            <!-- <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <i class="bx bx-cube-alt"></i>
               <h4>Ullamco laboris nisi</h4>
               <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
@@ -95,12 +101,13 @@
               <i class="bx bx-cube-alt"></i>
               <h4>Ullamco laboris nisi</h4>
               <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
-            </div>
+            </div> -->
 
           </div>
         </div>
-
+        <div><h2>About Me</h2>I like Turtles</div>
       </div>
+
     </section><!-- End About Section -->
 
     <!-- ======= Steps Section ======= -->
