added about me and summary

--- a/index.html
+++ b/index.html
@@ -105,7 +105,12 @@
 
           </div>
         </div>
-        <div><h2>About Me</h2>I like Turtles</div>
+        <div data-aos="fade-up"><h2>About Me</h2>I am Full Stack Developer with a passion for learning new technologies. I also have experience with HTML5, CSS3,
+        JavaScript(ES5,6), React, jQuery, Node.js, PHP, MySQL, PostgreSQL, AWS(EC2, S3). I also earned a Bachelor of Science
+        degree in Business Administration with concentration in Economics and Statistics from CSULA. To stay current with the
+        latest trends in marketing, I have completed several professional development courses in content marketing, analytics
+        and AI strategy analytics. My academic and professional development background and work experience positions me well for
+        roles in Web Development and Software Engineering.</div>
       </div>
 
     </section><!-- End About Section -->
