--- a/index.html
+++ b/index.html
@@ -115,52 +115,6 @@
 
     </section><!-- End About Section -->
 
-    <!-- ======= Steps Section ======= -->
-    <section id="steps" class="steps section-bg">
-      <div class="container">
-
-        <div class="row no-gutters">
-
-          <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in">
-            <span>01</span>
-            <h4>Lorem Ipsum</h4>
-            <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
-          </div>
-
-          <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="100">
-            <span>02</span>
-            <h4>Repellat Nihil</h4>
-            <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
-          </div>
-
-          <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="200">
-            <span>03</span>
-            <h4> Ad ad velit qui</h4>
-            <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
-          </div>
-
-          <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="300">
-            <span>04</span>
-            <h4>Repellendus molestiae</h4>
-            <p>Inventore quo sint a sint rerum. Distinctio blanditiis deserunt quod soluta quod nam mider lando casa</p>
-          </div>
-
-          <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="400">
-            <span>05</span>
-            <h4>Sapiente Magnam</h4>
-            <p>Vitae dolorem in deleniti ipsum omnis tempore voluptatem. Qui possimus est repellendus est quibusdam</p>
-          </div>
-
-          <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-            <span>06</span>
-            <h4>Facilis Impedit</h4>
-            <p>Quis eum numquam veniam ea voluptatibus voluptas. Excepturi aut nostrum repudiandae voluptatibus corporis sequi</p>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Steps Section -->
 
     <!-- ======= Features Section ======= -->
     <!-- <section id="features" class="features">
@@ -351,7 +305,68 @@
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
-        <div class="row" data-aos="fade-up">
+<section id="steps" class="steps section-bg">
+  <div class="container">
+
+    <div class="row no-gutters">
+
+      <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in">
+        <span>01</span>
+        <h4>JavaScript</h4>
+        <!-- <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p> -->
+      </div>
+
+      <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="100">
+        <span>02</span>
+        <h4>CSS</h4>
+        <!-- <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p> -->
+      </div>
+
+      <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="200">
+        <span>03</span>
+        <h4>React</h4>
+        <!-- <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p> -->
+      </div>
+
+      <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="300">
+        <span>04</span>
+        <h4>HTML</h4>
+        <!-- <p>Inventore quo sint a sint rerum. Distinctio blanditiis deserunt quod soluta quod nam mider lando casa</p> -->
+      </div>
+
+      <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="400">
+        <span>05</span>
+        <h4>Node</h4>
+        <!-- <p>Vitae dolorem in deleniti ipsum omnis tempore voluptatem. Qui possimus est repellendus est quibusdam</p> -->
+      </div>
+
+      <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
+        <span>06</span>
+        <h4>Express</h4>
+        <!-- <p>Quis eum numquam veniam ea voluptatibus voluptas. Excepturi aut nostrum repudiandae voluptatibus corporis sequi</p> -->
+      </div>
+
+      <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
+        <span>06</span>
+        <h4>MySQL</h4>
+        <!-- <p>Quis eum numquam veniam ea voluptatibus voluptas. Excepturi aut nostrum repudiandae voluptatibus corporis sequi</p> -->
+      </div>
+      <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
+        <span>06</span>
+        <h4>Postgresql</h4>
+        <!-- <p>Quis eum numquam veniam ea voluptatibus voluptas. Excepturi aut nostrum repudiandae voluptatibus corporis sequi</p> -->
+      </div>
+      <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
+        <span>06</span>
+        <h4>Jquery</h4>
+        <!-- <p>Quis eum numquam veniam ea voluptatibus voluptas. Excepturi aut nostrum repudiandae voluptatibus corporis sequi</p> -->
+      </div>
+    </div>
+
+  </div>
+</section>
+
+        <!-- <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
@@ -493,7 +508,7 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section> --><!-- End Portfolio Section -->
 
     <!-- ======= Team Section ======= -->
     <section id="team" class="team">
