removed commented out code in credits

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <li><a href="#portfolio">Skills</a></li>
           <li><a href="#team">Tools</a></li>
           <li><a href="#contact">Contact</a></li>
+          <li><a>Resume</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
@@ -397,11 +398,11 @@
 
               </div>
 
-              <div class="col-lg-5 d-flex align-items-stretch">
-                <iframe style="border:0; width: 100%; height: 270px;"
-                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
-                  frameborder="0" allowfullscreen></iframe>
-              </div>
+                <!-- <div class="col-lg-5 d-flex align-items-stretch">
+                  <iframe style="border:0; width: 100%; height: 270px;"
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+                    frameborder="0" allowfullscreen></iframe>
+                </div> -->
 
             </div>
 
@@ -421,11 +422,7 @@
         &copy; Copyright <strong><span>Jerry Ong</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/maxim-free-onepage-bootstrap-theme/ -->
-        Designed by <a href="https://bootstrapmade.com/">Jerry Ong</a>
+        Designed by <a href="https://jerry-ong.com/">Jerry Ong</a>
       </div>
     </div>
   </footer><!-- End Footer -->
