--- a/index.html
+++ b/index.html
@@ -39,8 +39,6 @@
 
       <div class="logo mr-auto">
         <h1 class="text-light"><a href="index.html">Jerry Ong</a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -63,7 +61,7 @@
     <div class="container text-center text-md-left" data-aos="fade-up">
       <h1>Jerry Ong</h1>
       <h2>Full-Stack Web Developer</h2>
-      <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
+      <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
 
@@ -285,83 +283,6 @@
 
           </div>
         </section>
-            <!-- <div class="row">
-
-              <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up">
-                <div class="member">
-                  <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
-                  <div class="member-info">
-                    <div class="member-info-content">
-                      <h4>Walter White</h4>
-                      <span>Chief Executive Officer</span>
-                    </div>
-                    <div class="social">
-                      <a href=""><i class="icofont-twitter"></i></a>
-                      <a href=""><i class="icofont-facebook"></i></a>
-                      <a href=""><i class="icofont-instagram"></i></a>
-                      <a href=""><i class="icofont-linkedin"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-                <div class="member">
-                  <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
-                  <div class="member-info">
-                    <div class="member-info-content">
-                      <h4>Sarah Jhonson</h4>
-                      <span>Product Manager</span>
-                    </div>
-                    <div class="social">
-                      <a href=""><i class="icofont-twitter"></i></a>
-                      <a href=""><i class="icofont-facebook"></i></a>
-                      <a href=""><i class="icofont-instagram"></i></a>
-                      <a href=""><i class="icofont-linkedin"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-                <div class="member">
-                  <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
-                  <div class="member-info">
-                    <div class="member-info-content">
-                      <h4>William Anderson</h4>
-                      <span>CTO</span>
-                    </div>
-                    <div class="social">
-                      <a href=""><i class="icofont-twitter"></i></a>
-                      <a href=""><i class="icofont-facebook"></i></a>
-                      <a href=""><i class="icofont-instagram"></i></a>
-                      <a href=""><i class="icofont-linkedin"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-                <div class="member">
-                  <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
-                  <div class="member-info">
-                    <div class="member-info-content">
-                      <h4>Amanda Jepson</h4>
-                      <span>Accountant</span>
-                    </div>
-                    <div class="social">
-                      <a href=""><i class="icofont-twitter"></i></a>
-                      <a href=""><i class="icofont-facebook"></i></a>
-                      <a href=""><i class="icofont-instagram"></i></a>
-                      <a href=""><i class="icofont-linkedin"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-            </div> -->
-
-          </div>
         </section><!-- End Team Section -->
 
         <!-- ======= Contact Section ======= -->
@@ -415,8 +336,6 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-
-
     <div class="container">
       <div class="copyright">
         &copy; Copyright <strong><span>Jerry Ong</span></strong>. All Rights Reserved
