added assets for tech logos

--- a/index.html
+++ b/index.html
@@ -175,47 +175,44 @@
             <div class="row no-gutters">
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in">
-                <span>01</span>
                 <h4>JavaScript</h4>
+                <img src="assets/img/icons8-javascript.svg">
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="100">
-                <span>02</span>
                 <h4>CSS</h4>
+                <img src="assets/img/icons8-css3.svg">
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="200">
-                <span>03</span>
                 <h4>React</h4>
+                <img src="assets/img/icons8-react-native.svg">
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="300">
-                <span>04</span>
                 <h4>HTML</h4>
+                <img src="assets/img/icons8-html-5.svg">
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="400">
-                <span>05</span>
                 <h4>Node</h4>
+                <img src="assets/img/icons8-nodejs.svg">
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <span>06</span>
                 <h4>Express</h4>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <span>06</span>
                 <h4>MySQL</h4>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <span>06</span>
                 <h4>Postgresql</h4>
+                <img src="assets/img/icons8-postgresql.svg">
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <span>06</span>
                 <h4>Jquery</h4>
               </div>
             </div>
@@ -236,47 +233,44 @@
             <div class="row no-gutters">
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in">
-                <span>01</span>
                 <h4>Git/Github</h4>
+                <img src="assets/img/icons8-github.svg">
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="100">
-                <span>02</span>
                 <h4>VS Code</h4>
+                <img src="assets/img/icons8-visual-studio-code-2019.svg">
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="200">
-                <span>03</span>
                 <h4>Meister Task</h4>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="300">
-                <span>04</span>
                 <h4>npm</h4>
+                <img src="assets/img/icons8-npm.svg">
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="400">
-                <span>05</span>
                 <h4>Chrome Dev Tools</h4>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <span>06</span>
+                <h1><i class="devicon-amazonwebservices-original"></i></h1>
                 <h4>Amazon Web Services</h4>
+                <img src="assets/img/icons8-amazon-s3.svg">
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <span>06</span>
                 <h4>Apache</h4>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <span>06</span>
                 <h4>NGINX</h4>
+                <img src="assets/img/icons8-nginx.svg">
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <span>06</span>
                 <h4>Figma</h4>
               </div>
             </div>
