added mysql asset

--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>MySQL</h4>
+                <img src="assets/img/mysql-seeklogo.com.svg" height="220px" width="220px">
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
