added express and jqeury asset

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>Express</h4>
+                <img src="assets/img/express-js-seeklogo.com.svg" height="240px" width="240px">
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
@@ -214,7 +215,8 @@
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <h4>Jquery</h4>
+                <h4>jQuery</h4>
+                <img src="assets/img/jquery-seeklogo.com.svg" height="240px" width="240px">
               </div>
             </div>
 
