removed apache, added git and figma asset

--- a/index.html
+++ b/index.html
@@ -236,36 +236,36 @@
             <div class="row no-gutters">
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in">
-                <h4>Git/Github</h4>
+                <h4>Github</h4>
                 <img src="assets/img/icons8-github.svg">
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="100">
+                <h4>Git</h4>
+                <img src="assets/img/icons8-git.svg">
+              </div>
+
+              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="200">
                 <h4>VS Code</h4>
                 <img src="assets/img/icons8-visual-studio-code-2019.svg">
               </div>
 
-              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="200">
+              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="300">
                 <h4>Meister Task</h4>
               </div>
 
-              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="300">
+              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="400">
                 <h4>npm</h4>
                 <img src="assets/img/icons8-npm.svg">
               </div>
 
-              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="400">
+              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>Chrome Dev Tools</h4>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <h1><i class="devicon-amazonwebservices-original"></i></h1>
                 <h4>Amazon Web Services</h4>
                 <img src="assets/img/icons8-amazon-s3.svg">
-              </div>
-
-              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <h4>Apache</h4>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
@@ -275,6 +275,7 @@
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>Figma</h4>
+                <img src="assets/img/Figma-logo.svg" height="240px" width="240px">
               </div>
             </div>
 
