added chromedev and meistertask asset

--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="300">
                 <h4>Meister Task</h4>
+                <img src="assets/img/meistertask.png" height="240px" width="240px">
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="400">
@@ -261,6 +262,7 @@
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>Chrome Dev Tools</h4>
+                <img src="assets/img/chromedev.svg" height="240px" width="240px">
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
