added href to project sites

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
             <div class="icon-box icon-box-pink">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">MTG Memory Match</a></h4>
+              <h4 class="title"><a href="https://memory-match.jerry-ong.com">MTG Memory Match</a></h4>
               <p class="description">Magic The Gathering themed memory matching game</p>
             </div>
           </div>
@@ -133,7 +133,7 @@
             data-aos-delay="100">
             <div class="icon-box icon-box-cyan">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Wicked Sales</a></h4>
+              <h4 class="title"><a href="https://wicked-sales.jerry-ong.com">Wicked Sales</a></h4>
               <p class="description">A basic CRUD webpage selling as seen on tv products</p>
             </div>
           </div>
@@ -142,7 +142,7 @@
             data-aos-delay="200">
             <div class="icon-box icon-box-green">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Roommates</a></h4>
+              <h4 class="title"><a href="https://roommates.jerry-ong.com">Roommates</a></h4>
               <p class="description">A web application that helps roommates share and organize space in their
                 refrigerator</p>
             </div>
