--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="300">
                 <h4>Meister Task</h4>
-                <img src="assets/img/meistertask.png" height="240px" width="240px">
+                <img src="assets/img/meistertask.png" height="200px" width="200px">
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="400">
@@ -277,7 +277,7 @@
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>Figma</h4>
-                <img src="assets/img/Figma-logo.svg" height="240px" width="240px">
+                <img src="assets/img/Figma-logo.svg" height="200px" width="200px">
               </div>
             </div>
 
@@ -304,15 +304,17 @@
                   </div>
 
                   <div class="email mt-4">
+                    <a href="mailto:jerryong89@gmail.com">
                     <i class="icofont-envelope"></i>
                     <h4>Email:</h4>
-                    <p>jerryong89@gmail.com</p>
+                    <p>jerryong89@gmail.com</p></a>
                   </div>
 
                   <div class="phone mt-4">
+                    <a href="tel:(323)5275268">
                     <i class="icofont-phone"></i>
                     <h4>Call:</h4>
-                    <p>(323)527-5268</p>
+                    <p>(323)527-5268</p></a>
                   </div>
 
                 </div>
