got phone number link to work

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                   </div>
 
                   <div class="phone mt-4">
-                    <a href="tel:(323)5275268">
+                    <a href="tel:+13235275268">
                     <i class="icofont-phone"></i>
                     <h4>Call:</h4>
                     <p>(323)527-5268</p></a>
