--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
           <div class="col-xl-6 col-lg-7" data-aos="fade-right">
             <img src="assets/img/jerry.jpg" class="img-fluid" alt="">
               <div class="social">
-                <a href=""><i class="icofont-twitter"></i></a>
-                <a href=""><i class="icofont-facebook"></i></a>
-                <a href=""><i class="icofont-instagram"></i></a>
+                <a href=""><i class="icofont-github"></i></a>
                 <a href=""><i class="icofont-linkedin"></i></a>
               </div>
           </div>
