added resume link under about me portion

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <img src="assets/img/jerry.jpg" class="img-fluid" alt="">
               <div class="social">
                 <a href=""><i class="icofont-github"></i></a>
+                <a href=""><i class="icofont-github"></i></a>
                 <a href=""><i class="icofont-linkedin"></i></a>
               </div>
           </div>
