--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
               <div class="social">
                 <a href=""><i class="icofont-github"></i></a>
                 <a href=""><i class="icofont-github"></i></a>
+                <a href=""><i class="icofont-github"></i></a>
                 <a href=""><i class="icofont-linkedin"></i></a>
               </div>
           </div>
