--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li><a href="#portfolio">Skills</a></li>
           <li><a href="#team">Tools</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a>Resume</a></li>
+          <li><a href="https://docs.google.com/document/d/1ij1jHo_l1aoOZlSWrJcMlUy8AGu5yTvx-1hHxKjWKWk/export?format=pdf" download>Resume</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
