added link to github and linkedin

--- a/index.html
+++ b/index.html
@@ -74,16 +74,10 @@
         <div class="row">
           <div class="col-xl-6 col-lg-7" data-aos="fade-right">
             <img src="assets/img/jerry.jpg" class="img-fluid" alt="">
-              <div class="social">
-                <a href=""><i class="icofont-github"></i></a>
-                <a href=""><i class="icofont-github"></i></a>
-                <a href=""><i class="icofont-github"></i></a>
-                <a href=""><i class="icofont-linkedin"></i></a>
-              </div>
           </div>
           <div class="col-xl-6 col-lg-5 pt-5 pt-lg-0">
             <div class="icon-box" data-aos="fade-up">
-              <i class="bx bx-receipt"></i>
+              <br>
               <h4>Name</h4>
               <p>Jerry Ong</p>
               <h4>Title</h4>
@@ -92,10 +86,15 @@
               <p>jerryong89@gmail.com</p>
               <h4>Phone</h4>
               <p>(323)527-5268</p>
+              <h4>GitHub</h4>
+              <a href="https://github.com/jerryong89"><p>https://github.com/jerryong89</p></a>
+              <h4>Linkedin</h4>
+              <a href="https://www.linkedin.com/in/jerryong89/"><p>https://www.linkedin.com/in/jerryong89/</p></a>
             </div>
           </div>
         </div>
         <div data-aos="fade-up">
+          <br>
           <h2>About Me</h2>I am Full Stack Developer with a passion for learning new technologies. I also have
           experience with HTML5, CSS3,
           JavaScript(ES5,6), React, jQuery, Node.js, PHP, MySQL, PostgreSQL, AWS(EC2, S3). I also earned a Bachelor of
