added assets for projects portion

--- a/index.html
+++ b/index.html
@@ -95,17 +95,16 @@
         </div>
         <div data-aos="fade-up">
           <br>
-          <h2>About Me</h2>I am Full Stack Developer with a passion for learning new technologies. I also have
-          experience with HTML5, CSS3,
-          JavaScript(ES5,6), React, jQuery, Node.js, PHP, MySQL, PostgreSQL, AWS(EC2, S3). I also earned a Bachelor of
-          Science
-          degree in Business Administration with concentration in Economics and Statistics from CSULA. To stay current
-          with the
-          latest trends in marketing, I have completed several professional development courses in content marketing,
-          analytics
-          and AI strategy analytics. My academic and professional development background and work experience positions
-          me well for
-          roles in Web Development and Software Engineering.
+          <h2>About Me</h2>I am Full Stack Developer with a passion for learning new technologies. I also have experience with HTML5, CSS3, JavaScript(ES5,6), React, jQuery, Node.js, PHP, MySQL, PostgreSQL, AWS(EC2, S3).
+          <br>
+          <br>
+          I also earned a Bachelor of
+          Science degree in Business Administration with concentration in Economics and Statistics from CSULA. To stay current
+          with the latest trends in marketing, I have completed several professional development courses in content marketing, analytics
+          and AI strategy analytics.
+          <br>
+          <br>
+          My academic and professional development background and work experience positions me well for roles in Web Development and Software Engineering.
         </div>
       </div>
 
@@ -117,33 +116,43 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Projects</h2>
+
         </div>
 
         <div class="centering row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
+            <a href="https://memory-match.jerry-ong.com">
             <div class="icon-box icon-box-pink">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="https://memory-match.jerry-ong.com">MTG Memory Match</a></h4>
+              <img src="assets/img/memorymatch.png" heights="240px" width="200px">
+              <h4 class="title">MTG Memory Match</h4>
               <p class="description">Magic The Gathering themed memory matching game</p>
+              </a>
             </div>
+
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
+            <a href="https://wicked-sales.jerry-ong.com">
             <div class="icon-box icon-box-cyan">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="https://wicked-sales.jerry-ong.com">Wicked Sales</a></h4>
+              <img src="assets/img/wickedsales.png" heights="240px" width="200px">
+              <h4 class="title">Wicked Sales</h4>
+
               <p class="description">A basic CRUD webpage selling as seen on tv products</p>
+              </a>
             </div>
+
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="200">
+            <a href="https://roommates.jerry-ong.com">
             <div class="icon-box icon-box-green">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="https://roommates.jerry-ong.com">Roommates</a></h4>
+              <img src="assets/img/roommates.png" heights="240px" width="200px">
+              <h4 class="title">Roommates</h4>
               <p class="description">A web application that helps roommates share and organize space in their
                 refrigerator</p>
+                </a>
             </div>
           </div>
 
